Backport to Minecraft 1.20.1 Forge